force-app/main/default/objects/Rover__c/Rover__c.object-meta.xml
<CustomObject>
    <label>Rover</label>
    <nameField>
        <label>Rover Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rovers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>