force-app/main/default/objects/Rover__c/fields/Fecha_de_aterrizaje__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_aterrizaje__c</fullName>
    <label>Fecha de aterrizaje en Marte</label>
    <type>Date</type>
</CustomField>