force-app/main/default/objects/Rover__c/fields/Fecha_de_lanzamiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_lanzamiento__c</fullName>
    <label>Fecha de lanzamiento desde La Tierra</label>
    <type>Date</type>
</CustomField>