force-app/main/default/objects/Rover__c/fields/Fecha_maxima_de_la_mision__c.field-meta.xml
<CustomField>
    <fullName>Fecha_maxima_de_la_mision__c</fullName>
    <description>Es el valor max_date, The most recent Earth date from which photos exist</description>
    <label>Fecha más reciente con fotos</label>
    <type>Date</type>
</CustomField>