force-app/main/default/objects/Rover__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Nombre del Rover</description>
    <label>Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>