force-app/main/default/objects/Rover__c/fields/Numero_de_dias_de_la_mision__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_dias_de_la_mision__c</fullName>
    <description>El el valor max_sol.</description>
    <label>Número de días de la misión</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>