force-app/main/default/objects/Rover__c/fields/Numero_de_fotografias__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_fotografias__c</fullName>
    <label>Número de fotografías</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>