force-app/main/default/objects/Rover__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Mission status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>