force-app/main/default/objects/Rover__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Fecha_de_lanzamiento__c</columns>
    <columns>Fecha_de_aterrizaje__c</columns>
    <columns>Numero_de_dias_de_la_mision__c</columns>
    <columns>Status__c</columns>
    <columns>Numero_de_fotografias__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>